# geo-stream-kafka

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  TODO  docker-compose.yml  pyproject.toml  readme.md
geostream/: Dockerfile  Dockerfile-consumer  Dockerfile-producer  requirements.txt
geostream/consumer/app/: main.py  mainflask.py
geostream/consumer/app/core/: config.py
geostream/consumer/app/core/models/: model.py
geostream/consumer/tests/: conftest.py  test_consumer.py  test_data_model.py
geostream/frontend/app/: index.html
geostream/frontend/app/static/: map.css  map.js
geostream/producer/app/: main.py
geostream/producer/app/core/: config.py
geostream/producer/app/core/models/: model.py
geostream/producer/tests/: test_data_model.py  test_producer.py
img/: geostream-kafka.drawio  kafka.drawio
scripts/: consumer.ipynb  consumer.py  producer.ipynb  producer2.ipynb  route1.json  route2.json
