[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "geostream_kafka"
author = "Benjamin Ramser"
author-email = "ahoi@iwpnd.pw"
home-page = "https://github.com/iwpnd/geostream-kafka"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires = [
    "fastapi",
    "pykafka",
    "loguru==0.4.1",
]
description-file = "readme.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = ""

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=4.0.0",
    "pytest-cov"
]

doc = []
dev = []
all = []
